--- a/natrium-ia/backend/requirements.txt
+++ b/natrium-ia/backend/requirements.txt
@@ -8,3 +8,10 @@ supabase
 psycopg2-binary==2.9.9
 pillow==10.3.0
 pypdf==4.2.0
+python-dotenv
+langchain-openai
+langchain-core
+python-multipart
+pypdf
+chromadb
+langchain-community
